# federated_learning_app

./: .gitignore  README.md  device_analysis_round_5.json  pyproject.toml  requirements.txt
adaptive_federated_healthcare/client/: app.py
adaptive_federated_healthcare/core/: core.py
adaptive_federated_healthcare/experiments/: run_simulation.py
adaptive_federated_healthcare/server/: app.py
docker/: client.Dockerfile  docker-compose.yml  server.Dockerfile
docker/artifacts_fed_flwr_ray/: config.json
docker/entrypoints/: client_entrypoint.sh  server_entrypoint.sh
docker_simulation/: docker-compose.yml  requirements.txt
docker_simulation/constraints/: mobile_limits.sh  pi_limits.sh  workstation_limits.sh
docker_simulation/dockerfiles/: mobile.Dockerfile  raspberry_pi.Dockerfile  server.Dockerfile  workstation.Dockerfile
docker_simulation/scripts/: device_manager.py  monitor_devices.py  start_federation.sh
federated_learning_app/: analysis_tools.py  client_app.py  config_manager.py  device_manager.py  knowledge_distillation.py  server_app.py  task.py
