[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-awesome-app"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "mlflow>=2.0.0",
    "medmnist>=2.2.3",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",        
    "seaborn>=0.11.0",      
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "folu"

[tool.flwr.app.components]
serverapp = "federated_learning_app.server_app:app"
clientapp = "federated_learning_app.client_app:app"

[tool.flwr.app.config]
# Runtime mode: "dev", "test", or "prod"
mode = "prod"

# Development mode (fast iteration)
dev-teacher-epochs = 2
dev-student-epochs = 2
dev-dataset-size = 1000
dev-num-server-rounds = 2
dev-fraction-fit = 0.5
dev-local-epochs = 1

# Test mode (moderate testing)
test-teacher-epochs = 4
test-student-epochs = 3
test-dataset-size = 5000
test-num-server-rounds = 3
test-fraction-fit = 0.5
test-local-epochs = 1

# Production mode (full training)
prod-teacher-epochs = 8
prod-student-epochs = 5
prod-dataset-size = -1
prod-num-server-rounds = 5
prod-fraction-fit = 0.3
prod-local-epochs = 2

# Model caching (applies to all modes)
use-cached-models = true
force-retrain = false
model-cache-dir = "./saved_models"

# Legacy support (required by Flower)
num-server-rounds = 2
fraction-fit = 0.5
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10