[tool.poetry]
name = "adaptive_federated_healthcare"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = ">=1.9"
torchvision = ">=0.10"
numpy = "*"
scikit-learn = "*"
pandas = "*"
flwr = "*"
medmnist = "*"
torch-pruning = "*"
opacus = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"

[tool.poetry.extras]
dp = ["opacus"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
